--- a/index.html
+++ b/index.html
@@ -167,9 +167,9 @@
 			<!-- Slider -->
 			<div id="slide">
 			<div class="slideshow-container">
-			<div class="mySlides fade"> <img src="assets/img/Slider/1.jpg" alt="Slider1" style="width:100%"> </div>
-			<div class="mySlides fade"> <img src="assets/img/Slider/2.jpg" alt="Slider2" style="width:100%"> </div>
-			<div class="mySlides fade"> <img src="assets/img/Slider/3.jpg" alt="Slider3" style="width:100%"> </div>
+			<div class="mySlides fade"> <img src="assets/img/slider/1.jpg" alt="Slider1" style="width:100%"> </div>
+			<div class="mySlides fade"> <img src="assets/img/slider/2.jpg" alt="Slider2" style="width:100%"> </div>
+			<div class="mySlides fade"> <img src="assets/img/slider/3.jpg" alt="Slider3" style="width:100%"> </div>
 			<a class="prev" onclick="plusSlides(-1)">&#10094;</a> <a class="next" onclick="plusSlides(1)">&#10095;</a> 
 			</div>
 			<br>
