made email link functional
Added anchor tag  with mailto attribute to make email address functional

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 	<div class="col-md-6">
 			<ul class="list-inline top-v1-contacts">
 			<li>
-			<i class="fa fa-envelope"></i> Email: unityhospital@gmail.com
+			<i class="fa fa-envelope"></i> Email: <a href="mailto:unityhospital@gmail.com">unityhospital@gmail.com</a>
 			</li>
 			<li>
 			<i class="fa fa-phone"></i> Contact no : 88666 00555
@@ -513,7 +513,7 @@
 		Unity Hospital <br />
 		Ahmedabad, IN <br />
 		Phone: 886 666 00555 <br />
-		Email: unityhospital@gmail.com 
+		Email: <a href="mailto:unityhospital@gmail.com">unityhospital@gmail.com</a> 
 		</address>
 		</div><!--/col-md-3-->
 		<!-- End Address -->
