--- a/index.html
+++ b/index.html
@@ -238,7 +238,7 @@
 		<div class="container content-md welcomeSection">
 		<div class="row section1">
 		<div class="col-md-6" style="margin-bottom: 40px;" style="border:2px solid black background: green;">
-			<h2 class="title-v2">WELCOME TO <span style="color: #72c02c;"> UNITY </span></h2>
+			<h2 class="title-v2">ETC BEST TEAM IN THE  <span style="color: #72c02c;"> WORLD! </span></h2>
 			<p style="text-align: justify; font-size: 14px;">A state-of-the art modern facility in the heart of the Gujarat state, it is spread over 10 acres and has a built-up area of over 440000 square feet. Currently the hospital has 300+ beds with a capacity to expand to 400 beds.</p>
 			<p style="text-align: justify; font-size: 14px;">Unity Hospital, Ahmedabad is a tertiary care flagship unit of the Unity Hospitals Group.The Hospital focuses on centres of excellence like Cardiac Sciences, Neuro Sciences, Orthopaedics including Knee Replacement, Hip Replacement and Spine Surgery, Cancer, Emergency Medicine and Solid Organ Transplants besides the complete range of more than 35 allied medical disciplines under the same roof.</p> 
 			<p style="text-align: justify; font-size: 14px;"> Unity Hospital, Ahmedabad provides holistic healthcare that includes prevention, treatment, rehabilitation and health education for patients, their families and clients by touching their lives.</p> <br>
